Todos los html y js cargados. V1 lista

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
 <body>
 <a href="/odontologos/registrar">Registrar odontologo</a>
 <a href="/odontologos/list">Listar odontologos</a>
-<a href="pacientes-registro.html">Registrar paciente</a>
-<a href="pacientes-list.html">Listar pacientes</a>
-<a href="turnos-registro.html">Registrar turno</a>
-<a href="turnos-list.html">Listar turnos</a>
+<a href="/pacientes/registrar">Registrar paciente</a>
+<a href="/pacientes/list">Listar pacientes</a>
+<a href="/turnos/registrar">Registrar turno</a>
+<a href="/turnos/list">Listar turnos</a>
 </body>
 </html>
