--- a/src/main/resources/templates/odontologo-list.html
+++ b/src/main/resources/templates/odontologo-list.html
@@ -6,10 +6,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 <body>
-<a href="index.html">Volver</a>
-<a href="odontologo-registro.html">Registrar nuevo odontologo</a>
+<a href="/index">Volver</a>
+<a href="/odontologos">Registrar nuevo odontologo</a>
 
-<a href="index.html">Volver</a>
 
 <table class="table">
   <thead>
@@ -27,11 +26,10 @@
     <td th:text="${odontologo.getNombre()}">NOMBRE</td>
     <td th:text="${odontologo.getApellido()}">Apellido</td>
     <td>
-
-<!--      <button><a th:href="@{/odontologos/actualizar-odontologo/{id}(id=${odontologo.id})}">Editar</a></button>-->
+      <button><a th:href="@{/odontologos/modificar/{id}(id=${odontologo.getId()})}">Editar</a></button>
     </td>
     <td>
-      <button th:onclick="'eliminarOdontologo(' + ${odontologo.getId()} + ')'" type="button">Eliminar</button>
+      <button th:onclick="'deleteOdontologo(' + ${odontologo.getId()} + ')'" type="button">Eliminar</button>
     </td>
 
   </tr>
@@ -40,6 +38,6 @@
   </tbody>
 </table>
 
-
+<script src="/static/js/odontologo-delete.js"></script>
 </body>
 </html>
