--- a/src/main/resources/templates/odontologo-modificar.html
+++ b/src/main/resources/templates/odontologo-modificar.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
 </head>
 <body>
 <a href="/index">Volver</a>
-<form id="form-registro">
+<form id="form-modificar">
   <div class="row g-3">
     <div class="col">
       <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="last-name">
@@ -23,6 +23,6 @@
   </div>
   <button name="submit" type="submit" id="odontologo-submit">Submit</button>
 </form>
-<script src="/static/js/odontologo-registro.js"></script>
+<script src="/static/js/odontologo-modificar.js"></script>
 </body>
 </html>
