--- a/src/main/resources/templates/paciente-list.html
+++ b/src/main/resources/templates/paciente-list.html
@@ -6,6 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 <body>
+<a href="/index">Volver</a>
+<a href="/pacientes/registrar">Registrar nuevo paciente</a>
+
 <table class="table">
     <thead>
     <tr>
@@ -19,11 +22,17 @@
         <td th:text="${paciente.getId()}">ID</td>
         <td th:text="${paciente.getApellido()}">Apellido</td>
         <td th:text="${paciente.getNombre()}">Nombre</td>
+        <td>
+            <button><a th:href="@{/pacientes/modificar/{id}(id=${paciente.getId()})}">Editar</a></button>
+        </td>
+        <td>
+            <button th:onclick="'deletePaciente(' + ${paciente.getId()} + ')'" type="button">Eliminar</button>
+        </td>
     </tr>
 
     </tbody>
 </table>
 
-
+<script src="/static/js/paciente-delete.js"></script>
 </body>
 </html>
