Detalles de vista

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,13 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/odontologos/registrar">Registrar odontologo</a>
-<a href="/odontologos/list">Listar odontologos</a>
-<a href="/pacientes/registrar">Registrar paciente</a>
-<a href="/pacientes/list">Listar pacientes</a>
-<a href="/turnos/registrar">Registrar turno</a>
-<a href="/turnos/list">Listar turnos</a>
+
+<button type="button" class="btn btn-success"><a href="/odontologos/registrar">Registrar odontologo</a></button>
+<button type="button" class="btn btn-success"><a href="/odontologos/list">Listar odontologos</a></button>
+<button type="button" class="btn btn-success"><a href="/pacientes/registrar">Registrar paciente</a></button>
+<button type="button" class="btn btn-success"><a href="/pacientes/list">Listar pacientes</a></button>
+<button type="button" class="btn btn-success"><a href="/turnos/registrar">Registrar turno</a></button>
+<button type="button" class="btn btn-success"><a href="/turnos/list">Listar turnos</a></button>
+
 </body>
 </html>
