--- a/src/main/resources/templates/odontologo-registro.html
+++ b/src/main/resources/templates/odontologo-registro.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 <a href="/index">Volver</a>
-<form id="form-registro">
+<form class="mb-3" id="form-registro">
   <div class="row g-3">
-    <div class="col">
-      <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" id="last-name">
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre" id="nombre">
     </div>
-    <div class="col">
-      <input type="text" class="form-control" placeholder="First name" aria-label="First name" id="first-name">
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido" id="apellido">
     </div>
-    <div class="col">
+    <div class="input-group mb-3">
       <input type="text" class="form-control" placeholder="Matricula" aria-label="Matricula" id="matricula">
     </div>
   </div>
