--- a/src/main/resources/templates/turno-modificar.html
+++ b/src/main/resources/templates/turno-modificar.html
@@ -9,18 +9,18 @@
 </head>
 <body>
 <a href="/index">Volver</a>
-<form id="form-modificar">
+<form class="mb-3" id="form-modificar">
   <div class="row g-3">
-    <div class="col">
+    <div class="input-group mb-3">
       <input type="text" class="form-control" placeholder="Odontologo ID" aria-label="Odontologo ID" id="odontologo-id">
     </div>
-    <div class="col">
+    <div class="input-group mb-3">
       <input type="text" class="form-control" placeholder="Paciente ID" aria-label="Paciente ID" id="paciente-id">
     </div>
-    <div class="col">
+    <div class="input-group mb-3">
       <input type="date" class="form-control" placeholder="Fecha" aria-label="Fecha" id="fecha">
     </div>
-    <div class="col">
+    <div class="input-group mb-3">
       <input type="time" class="form-control" placeholder="Hora" aria-label="Hora" id="hora">
     </div>
   </div>
