--- a/src/main/resources/templates/paciente-registro.html
+++ b/src/main/resources/templates/paciente-registro.html
@@ -9,30 +9,30 @@
 </head>
 <body>
 <a href="/index">Volver</a>
-<form id="form-registro">
+<form class="mb-3" id="form-registro">
     <div class="row g-3">
-        <div class="col">
-            <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido" id="last-name">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre" id="nombre">
         </div>
-        <div class="col">
-            <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre" id="first-name">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido" id="apellido">
         </div>
-        <div class="col">
+        <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="DNI" aria-label="DNI" id="dni">
         </div>
-        <div class="col">
+        <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Email" aria-label="Email" id="email">
         </div>
-        <div class="col">
+        <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Provincia" aria-label="Provincia" id="provincia">
         </div>
-        <div class="col">
+        <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Localidad" aria-label="Localidad" id="localidad">
         </div>
-        <div class="col">
+        <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Calle" aria-label="Calle" id="calle">
         </div>
-        <div class="col">
+        <div class="input-group mb-3">
             <input type="number" class="form-control" placeholder="Numero calle" aria-label="Numero calle" id="numero-calle">
         </div>
     </div>
