--- a/src/main/resources/templates/turno-list.html
+++ b/src/main/resources/templates/turno-list.html
@@ -9,7 +9,7 @@
 <a href="/index">Volver</a>
 <a href="/turnos/registrar">Registrar nuevo turno</a>
 
-<table class="table">
+<table class="table table-striped">
     <thead>
     <tr>
         <th scope="col">ID</th>
@@ -17,6 +17,8 @@
         <th scope="col">Odontologo ID</th>
         <th scope="col">Fecha</th>
         <th scope="col">Hora</th>
+        <th>Editar</th>
+        <th>Eliminar</th>
     </tr>
     </thead>
     <tbody>
@@ -27,10 +29,10 @@
         <td th:text="${turno.getFecha()}">Fecha</td>
         <td th:text="${turno.getHora()}">Hora</td>
         <td>
-            <button><a th:href="@{/turnos/modificar/{id}(id=${turno.getId()})}">Editar</a></button>
+            <button type="button" class="btn btn-info"><a th:href="@{/turnos/modificar/{id}(id=${turno.getId()})}">Editar</a></button>
         </td>
         <td>
-            <button th:onclick="'deleteTurno(' + ${turno.getId()} + ')'" type="button">Eliminar</button>
+            <button th:onclick="'deleteTurno(' + ${turno.getId()} + ')'" type="button" class="btn btn-danger">Eliminar</button>
         </td>
     </tr>
 
